# sample

./: LICENSE  app.py  pyproject.toml
templates/: footer.html  home.html  jobitem.html  nav.html
